--- a/AutomateOpenGraph/AutomateOpenGraph.csproj
+++ b/AutomateOpenGraph/AutomateOpenGraph.csproj
@@ -57,6 +57,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="SortByDate.cs" />
     <Compile Include="StockInfo.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
