read ipo ipowar from file

--- a/AutomateOpenGraph/App.config
+++ b/AutomateOpenGraph/App.config
@@ -20,7 +20,10 @@
                 <value>6</value>
             </setting>
             <setting name="customlist" serializeAs="String">
-                <value>MINT-W7,ITEL-W2,ALL-W1,</value>
+                <value>MINT-W7,ITEL-W2,ALL-W1</value>
+            </setting>
+            <setting name="market" serializeAs="String">
+                <value>SET,SET50,TFEX,^DJIA,MAI</value>
             </setting>
         </AutomateOpenGraph.Properties.Settings>
     </userSettings>
