add setting datapah in app config

--- a/AutomateOpenGraph/App.config
+++ b/AutomateOpenGraph/App.config
@@ -23,7 +23,10 @@
                 <value>MINT-W7,ITEL-W2,ALL-W1</value>
             </setting>
             <setting name="market" serializeAs="String">
-                <value>SET,SET50,TFEX,^DJIA,MAI</value>
+                <value>SET,SET50,TFEX,MAI,^DJIA,^NIX,^HSKI</value>
+            </setting>
+            <setting name="datapath" serializeAs="String">
+                <value>C:\Users\nevada\Documents\vs2017project\AutomateOpenGraph\AutomateOpenGraph\data</value>
             </setting>
         </AutomateOpenGraph.Properties.Settings>
     </userSettings>
