--- a/AutomateOpenGraph/App.config
+++ b/AutomateOpenGraph/App.config
@@ -11,16 +11,16 @@
     <userSettings>
         <AutomateOpenGraph.Properties.Settings>
             <setting name="set50" serializeAs="String">
-                <value>ADVANC,AOT,AWC,BPP,BBL,BDMS,BEM,BGRIM,BH,BJC,BTS,CBG,CPALL,CPF,CPN,CRC,DTAC,EA,EGCO,GLOBAL,GPSC,GULF,HMPRO,INTUCH,IRPC,IVL,KBANK,KTB,KTC,LH,MINT,MTC,OSP,PTT,PTTEP,PTTGC,RATCH,SAWAD,SCB,SCC,TCAP,TISCO,TMB,TOA,TOP,TRUE,TU,VGI,WHA,X-X,BAM,MAKRO,STGT</value>
+                <value>ADVANC,AOT,AWC,BPP,BBL,BDMS,BEM,BGRIM,BH,BJC,BTS,CBG,CPALL,CPF,CPN,CRC,DTAC,EA,EGCO,GLOBAL,GPSC,GULF,HMPRO,INTUCH,IRPC,IVL,KBANK,KTB,KTC,LH,MINT,MTC,OSP,PTT,PTTEP,PTTGC,RATCH,SAWAD,SCB,SCC,TCAP,TISCO,TMB,TOA,TOP,TRUE,TTW,TU,VGI,WHA,X-X</value>
             </setting>
             <setting name="set100" serializeAs="String">
-                <value>ADVANC,AEONTS,AMATA,AOT,AP,AWC,BANPU,BPP,BBL,BCH,BCP,BCPG,BDMS,BEC,BEM,BGRIM,BH,BJC,BANPU,BTS,CBG,CENTEL,CHG,CK,CKP,COM7,CPALL,CPF,CPN,CRC,DELTA,DTAC,EA,EGCO,EPG,ERW,ESSO,GFPT,GLOBAL,GPSC,GULF,GUNKUL,HANA,HMPRO,INTUCH,IRPC,IVL,JAS,JMT,KBANK,KCE,KKP,KTB,KTC,LH,MAJOR,MEGA,MINT,MTC,ORI,OSP,PLANB,PRM,PSH,PTG,PTT,PTTEP,PTTGC,QH,RATCH,RS,SAWAD,SCB,SCC,SGP,SPALI,SPRC,STA,STEC,SUPER,TASCO,TCAP,THANI,TISCO,TKN,TMB,TOA,TOP,TPIPP,TQM,TRUE,TU,VGI,WHA,X-X,DOHOME,AAV,ACE,RBF,PSL,UTP,THCOM,THAI</value>
+                <value>ADVANC,AEONTS,AMATA,AOT,AP,AWC,BANPU,BPP,BBL,BCH,BCP,BCPG,BDMS,BEC,BEM,BGRIM,BH,BJC,BANPU,BTS,CBG,CENTEL,CHG,CK,CKP,COM7,CPALL,CPF,CPN,CRC,DELTA,DTAC,EA,EGCO,EPG,ERW,ESSO,GFPT,GLOBAL,GPSC,GULF,GUNKUL,HANA,HMPRO,INTUCH,IRPC,IVL,JAS,JMT,KBANK,KCE,KKP,KTB,KTC,LH,MAJOR,MEGA,MINT,MTC,ORI,OSP,PLANB,PRM,PSH,PTG,PTT,PTTEP,PTTGC,QH,RATCH,RS,SAWAD,SCB,SCC,SGP,SPALI,SPRC,STA,STEC,SUPER,TASCO,TCAP,THANI,TISCO,TKN,TMB,TOA,TOP,TPIPP,TQM,TRUE,TU,VGI,WHA,X-X,DOHOME,AAV,ACE,RBF,PSL,UTP,THCOM,THAI,JMART,BAM,MAKRO,STGT</value>
             </setting>
             <setting name="delaysec" serializeAs="String">
                 <value>6</value>
             </setting>
             <setting name="customlist" serializeAs="String">
-                <value>MINT-W7,ITEL-W2,ALL-W1</value>
+                <value>IIG,YGG,IP,RBF,SICT,SPVI,ASIAN,JKN,WICE,SPCG</value>
             </setting>
             <setting name="market" serializeAs="String">
                 <value>SET,SET50,TFEX,MAI,^DJIA,^NIX,^HSKI</value>
