change grid title

--- a/AutomateOpenGraph/AutomateOpenGraph.csproj
+++ b/AutomateOpenGraph/AutomateOpenGraph.csproj
@@ -93,6 +93,8 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="ipo.json" />
+    <None Include="ipowar.json" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
