change set100 a bit

--- a/AutomateOpenGraph/Properties/Settings.settings
+++ b/AutomateOpenGraph/Properties/Settings.settings
@@ -3,13 +3,13 @@
   <Profiles />
   <Settings>
     <Setting Name="set50" Type="System.String" Scope="User">
-      <Value Profile="(Default)">ADVANC,AOT,AWC,BPP,BBL,BDMS,BEM,BGRIM,BH,BJC,BTS,CBG,CPALL,CPF,CPN,CRC,DTAC,EA,EGCO,GLOBAL,GPSC,GULF,HMPRO,INTUCH,IRPC,IVL,KBANK,KTB,KTC,LH,MINT,MTC,OSP,PTT,PTTEP,PTTGC,RATCH,SAWAD,SCB,SCC,TCAP,TISCO,TMB,TOA,TOP,TRUE,TTW,TU,VGI,WHA,X-X</Value>
+      <Value Profile="(Default)">ADVANC,AOT,AWC,BPP,BBL,BDMS,BEM,BGRIM,BH,BJC,BTS,CBG,CPALL,CPF,CPN,CRC,DTAC,EA,EGCO,GLOBAL,GPSC,GULF,HMPRO,INTUCH,IRPC,IVL,KBANK,KTB,KTC,LH,MINT,MTC,OSP,PTT,PTTEP,PTTGC,RATCH,SAWAD,SCB,SCC,SCGP,TISCO,TMB,TOA,TOP,TRUE,TTW,TU,VGI,WHA,X-X</Value>
     </Setting>
     <Setting Name="set100" Type="System.String" Scope="User">
-      <Value Profile="(Default)">ADVANC,AEONTS,AMATA,AOT,AP,AWC,BANPU,BPP,BBL,BCH,BCP,BCPG,BDMS,BEC,BEM,BGRIM,BH,BJC,BANPU,BTS,CBG,CENTEL,CHG,CK,CKP,COM7,CPALL,CPF,CPN,CRC,DELTA,DTAC,EA,EGCO,EPG,ERW,ESSO,GFPT,GLOBAL,GPSC,GULF,GUNKUL,HANA,HMPRO,INTUCH,IRPC,IVL,JAS,JMT,KBANK,KCE,KKP,KTB,KTC,LH,MAJOR,MEGA,MINT,MTC,ORI,OSP,PLANB,PRM,PSH,PTG,PTT,PTTEP,PTTGC,QH,RATCH,RS,SAWAD,SCB,SCC,SGP,SPALI,SPRC,STA,STEC,SUPER,TASCO,TCAP,THANI,TISCO,TKN,TMB,TOA,TOP,TPIPP,TQM,TRUE,TU,VGI,WHA,X-X,DOHOME,AAV,ACE,RBF,PSL,UTP,THCOM,THAI,JMART,BAM,MAKRO,STGT,NER,NRF,JKN</Value>
+      <Value Profile="(Default)">ADVANC,AEONTS,AMATA,AOT,AP,AWC,BANPU,BPP,BBL,BCH,BCP,BCPG,BDMS,BEC,BEM,BGRIM,BH,BJC,BANPU,BTS,CBG,CENTEL,CHG,CK,CKP,COM7,CPALL,CPF,CPN,CRC,DELTA,DTAC,EA,EGCO,EPG,ERW,ESSO,GFPT,GLOBAL,GPSC,GULF,GUNKUL,HANA,HMPRO,INTUCH,IRPC,IVL,JAS,JMT,KBANK,KCE,KKP,KTB,KTC,LH,MAJOR,MEGA,MINT,MTC,ORI,OSP,PLANB,PRM,PSH,PTG,PTT,PTTEP,PTTGC,QH,RATCH,RS,SAWAD,SCB,SCC,SCGP,SGP,SPALI,SPRC,STA,STEC,SUPER,TASCO,TCAP,THANI,TISCO,TKN,TMB,TOA,TOP,TPIPP,TQM,TRUE,TU,VGI,WHA,X-X,DOHOME,AAV,ACE,RBF,PSL,JMART,BAM,MAKRO,STGT,NER,JKN,VGI-W2,MINT-W6,MINT-W7,SPCG,BTS-W5,NER-W1</Value>
     </Setting>
     <Setting Name="delaysec" Type="System.String" Scope="User">
-      <Value Profile="(Default)">6</Value>
+      <Value Profile="(Default)">7</Value>
     </Setting>
     <Setting Name="customlist" Type="System.String" Scope="User">
       <Value Profile="(Default)">IIG,YGG,IP,RBF,SICT,SPVI,ASIAN,JKN,WICE,SPCG</Value>
