--- a/AutomateOpenGraph/App.config
+++ b/AutomateOpenGraph/App.config
@@ -14,16 +14,16 @@
                 <value>ADVANC,AOT,AWC,BPP,BBL,BDMS,BEM,BGRIM,BH,BJC,BTS,CBG,CPALL,CPF,CPN,CRC,DTAC,EA,EGCO,GLOBAL,GPSC,GULF,HMPRO,INTUCH,IRPC,IVL,KBANK,KTB,KTC,LH,MINT,MTC,OSP,PTT,PTTEP,PTTGC,RATCH,SAWAD,SCB,SCC,SCGP,TISCO,TMB,TOA,TOP,TRUE,TTW,TU,VGI,WHA,X-X</value>
             </setting>
             <setting name="set100" serializeAs="String">
-                <value>ADVANC,AEONTS,AMATA,AOT,AP,AWC,BANPU,BPP,BBL,BCH,BCP,BCPG,BDMS,BEC,BEM,BGRIM,BH,BJC,BANPU,BTS,CBG,CENTEL,CHG,CK,CKP,COM7,CPALL,CPF,CPN,CRC,DELTA,DTAC,EA,EGCO,EPG,ERW,ESSO,GFPT,GLOBAL,GPSC,GULF,GUNKUL,HANA,HMPRO,INTUCH,IRPC,IVL,JAS,JMT,KBANK,KCE,KKP,KTB,KTC,LH,MAJOR,MEGA,MINT,MTC,ORI,OSP,PLANB,PRM,PSH,PTG,PTT,PTTEP,PTTGC,QH,RATCH,RS,SAWAD,SCB,SCC,SCGP,SGP,SPALI,SPRC,STA,STEC,SUPER,TASCO,TCAP,THANI,TISCO,TKN,TMB,TOA,TOP,TPIPP,TQM,TRUE,TU,VGI,WHA,X-X,DOHOME,AAV,ACE,RBF,PSL,JMART,BAM,MAKRO,STGT,NER,JKN,VGI-W2,MINT-W6,MINT-W7,SPCG,BTS-W5,NER-W1</value>
+                <value>ADVANC,AEONTS,AMATA,AOT,AP,AWC,BANPU,BPP,BBL,BCH,BCP,BCPG,BDMS,BEC,BEM,BGRIM,BH,BJC,BANPU,BTS,CBG,CENTEL,CHG,CK,CKP,COM7,CPALL,CPF,CPN,CRC,DELTA,DTAC,EA,EGCO,EPG,ERW,ESSO,GFPT,GLOBAL,GPSC,GULF,GUNKUL,HANA,HMPRO,INTUCH,IRPC,IVL,JAS,JMT,KBANK,KCE,KKP,KTB,KTC,LH,MAJOR,MEGA,MINT,MTC,ORI,OSP,PLANB,PRM,PSH,PTG,PTT,PTTEP,PTTGC,QH,RATCH,RS,SAWAD,SCB,SCC,SCGP,SGP,SPALI,SPRC,STA,STEC,SUPER,TASCO,TCAP,THANI,TISCO,TKN,TMB,TOA,TOP,TPIPP,TQM,TRUE,TU,VGI,WHA,X-X,DOHOME,AAV,ACE,RBF,PSL,JMART,BAM,MAKRO,STGT,NER,VGI-W2,MINT-W6,MINT-W7,SPCG,NER-W1,BEAUTY,THCOM,BLAND,AMANAH,WORK,BEC,BWG,BLAND,AU</value>
             </setting>
             <setting name="delaysec" serializeAs="String">
                 <value>7</value>
             </setting>
             <setting name="customlist" serializeAs="String">
-                <value>IIG,YGG,IP,RBF,SICT,SPVI,ASIAN,JKN,WICE,SPCG</value>
+                <value>BLAND</value>
             </setting>
             <setting name="market" serializeAs="String">
-                <value>SET,SET50,TFEX,MAI,^DJIA,^NIX,^HSKI</value>
+                <value>SET,SET50,TFEX,MAI,^DJIA,^NIX,^HSKI,^DAX,^FTSE,^JKSE,^KOSPI</value>
             </setting>
             <setting name="datapath" serializeAs="String">
                 <value>C:\Users\nevada\Documents\vs2017project\AutomateOpenGraph\AutomateOpenGraph\data</value>
