--- a/AutomateOpenGraph/Properties/Settings.settings
+++ b/AutomateOpenGraph/Properties/Settings.settings
@@ -3,10 +3,10 @@
   <Profiles />
   <Settings>
     <Setting Name="set50" Type="System.String" Scope="User">
-      <Value Profile="(Default)">ADVANC,AOT,AWC,BAM,BBL,BDMS,BEM,BGRIM,BH,BJC,BTS,CBG,COM7,CPALL,CPF,CPN,CRC,DELTA,DTAC,EA,EGCO,GLOBAL,GPSC,GULF,HMPRO,INTUCH,IVL,KBANK,KTB,KTC,LH,MINT,MTC,OSP,PTT,PTTEP,PTTGC,RATCH,SAWAD,SCB,SCC,SCGP,TISCO,TMB,TOA,TOP,TRUE,TTW,TU,VGI,X-X</Value>
+      <Value Profile="(Default)">ADVANC,AOT,AWC,BAM,BBL,BDMS,BEM,BGRIM,BH,BJC,BTS,CBG,COM7,CPALL,CPF,CPN,CRC,DELTA,DTAC,EA,EGCO,GLOBAL,GPSC,GULF,HMPRO,INTUCH,IVL,KBANK,KTB,KTC,LH,MINT,MTC,OSP,PTT,PTTEP,PTTGC,RATCH,SAWAD,SCB,SCC,SCGP,TISCO,TMB,TOA,TOP,TRUE,TU,VGI,X-X,OR</Value>
     </Setting>
     <Setting Name="set100" Type="System.String" Scope="User">
-      <Value Profile="(Default)">ADVANC,AEONTS,AMATA,AOT,AP,AWC,BANPU,BPP,BBL,BCH,BCP,BCPG,BDMS,BEC,BEM,BGRIM,BH,BJC,BANPU,BTS,CBG,CENTEL,CHG,CK,CKP,COM7,CPALL,CPF,CPN,CRC,DELTA,DTAC,EA,EGCO,EPG,ERW,ESSO,GFPT,GLOBAL,GPSC,GULF,GUNKUL,HANA,HMPRO,INTUCH,IRPC,IVL,JAS,JMT,KBANK,KCE,KKP,KTB,KTC,LH,MAJOR,MEGA,MINT,MTC,ORI,OSP,PLANB,PRM,PSH,PTG,PTT,PTTEP,PTTGC,QH,RATCH,RS,SAWAD,SCB,SCC,SCGP,SGP,SPALI,SPRC,STA,STEC,SUPER,TASCO,TCAP,THANI,TISCO,TKN,TMB,TOA,TOP,TPIPP,TQM,TRUE,TU,VGI,WHA,X-X,DOHOME,AAV,ACE,PSL,JMART,BAM,MAKRO,STGT,NER,SPCG,BEAUTY,THCOM,AMANAH,WORK,BEC,AU,TVO,KEX,NCAP,RBF,DOD</Value>
+      <Value Profile="(Default)">ADVANC,AEONTS,AMATA,AOT,AP,AWC,BANPU,BPP,BBL,BCH,BCP,BCPG,BDMS,BEC,BEM,BGRIM,BH,BJC,BANPU,BTS,CBG,CENTEL,CHG,CK,CKP,COM7,CPALL,CPF,CPN,CRC,DELTA,DTAC,EA,EGCO,EPG,ERW,ESSO,GFPT,GLOBAL,GPSC,GULF,GUNKUL,HANA,HMPRO,INTUCH,IRPC,IVL,JAS,JMT,KBANK,KCE,KKP,KTB,KTC,LH,MAJOR,MEGA,MINT,MTC,ORI,OSP,PLANB,PRM,PSH,PTG,PTT,PTTEP,PTTGC,QH,RATCH,RS,SAWAD,SCB,SCC,SCGP,SGP,SPALI,SPRC,STA,STEC,SUPER,TASCO,TCAP,THANI,TISCO,TKN,TMB,TOA,TOP,TPIPP,TQM,TRUE,TU,VGI,WHA,X-X,DOHOME,AAV,ACE,PSL,JMART,BAM,MAKRO,STGT,NER,SPCG,BEAUTY,THCOM,AMANAH,WORK,BEC,AU,TVO,KEX,NCAP,RBF,DOD,OR</Value>
     </Setting>
     <Setting Name="delaysec" Type="System.String" Scope="User">
       <Value Profile="(Default)">7</Value>
