--- a/AutomateOpenGraph/App.config
+++ b/AutomateOpenGraph/App.config
@@ -20,7 +20,7 @@
                 <value>7</value>
             </setting>
             <setting name="customlist" serializeAs="String">
-                <value>BLAND</value>
+                <value />
             </setting>
             <setting name="market" serializeAs="String">
                 <value>SET,SET50,TFEX,MAI,^DJIA,^NIX,^HSKI,^DAX,^FTSE,^JKSE,^KOSPI,RSS3F_CON,BDI,NYMEX</value>
