--- a/AutomateOpenGraph/AutomateOpenGraph.csproj
+++ b/AutomateOpenGraph/AutomateOpenGraph.csproj
@@ -100,6 +100,7 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <None Include="sector.json" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
