add prebuild event copy ipo*.json

--- a/AutomateOpenGraph/AutomateOpenGraph.csproj
+++ b/AutomateOpenGraph/AutomateOpenGraph.csproj
@@ -106,4 +106,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PreBuildEvent>copy  /y "$(ProjectDir)ipo*.json"  "$(ProjectDir)$(OutDir)"</PreBuildEvent>
+  </PropertyGroup>
 </Project>
