--- a/AutomateOpenGraph/App.config
+++ b/AutomateOpenGraph/App.config
@@ -14,7 +14,7 @@
                 <value>ADVANC,AOT,AWC,BAM,BBL,BDMS,BEM,BGRIM,BH,BJC,BTS,CBG,COM7,CPALL,CPF,CPN,CRC,DELTA,DTAC,EA,EGCO,GLOBAL,GPSC,GULF,HMPRO,INTUCH,IVL,KBANK,KTB,KTC,LH,MINT,MTC,OSP,PTT,PTTEP,PTTGC,RATCH,SAWAD,SCB,SCC,SCGP,TISCO,TTB,TOA,TOP,TRUE,TU,VGI,X-X,OR</value>
             </setting>
             <setting name="set100" serializeAs="String">
-                <value>ADVANC,AEONTS,AMATA,AOT,AP,AWC,BANPU,BPP,BBL,BCH,BCP,BCPG,BDMS,BEC,BEM,BGRIM,BH,BJC,BANPU,BTS,CBG,CENTEL,CK,CKP,COM7,CPALL,CPF,CPN,CRC,DELTA,DTAC,EA,EGCO,EPG,ERW,ESSO,GFPT,GLOBAL,GPSC,GULF,GUNKUL,HANA,HMPRO,INTUCH,IRPC,IVL,JAS,JMT,KBANK,KCE,KKP,KTB,KTC,LH,MAJOR,MEGA,MINT,MTC,ORI,OSP,PLANB,PRM,PSH,PTG,PTT,PTTEP,PTTGC,RATCH,RS,SAWAD,SCB,SCC,SCGP,SGP,SPALI,SPRC,STA,STEC,SUPER,TASCO,TCAP,THANI,TISCO,TKN,TTB,TOA,TOP,TPIPP,TQM,TRUE,TU,VGI,WHA,X-X,DOHOME,AAV,ACE,PSL,JMART,BAM,MAKRO,STGT,NER,SPCG,BEAUTY,THCOM,AMANAH,WORK,BEC,AU,TVO,KEX,RBF,DOD,OR,SYNEX,JKN,TIDLOR,TTA,CHAYO,RCL,PSL,TTA</value>
+                <value>AAV,ACE,ADVANC,AEONTS,AMATA,AOT,AP,BAM,BANPU,BBL,BCH,BCP,BCPG,BDMS,BEC,BEM,BGRIM,BH,BJC,BTS,CBG,CENTEL,CHG,CK,CKP,COM7,CPALL,CPF,CPN,CRC,DELTA,DOHOME,DTAC,EA,EGCO,ESSO,GLOBAL,GPSC,GULF,GUNKUL,HANA,HMPRO,ICHI,INTUCH,IRPC,IVL,JAS,JMART,JMT,KBANK,KCE,KKP,KTB,KTC,LH,MAJOR,MEGA,MINT,MTC,NRF,OR,ORI,OSP,PLANB,PRM,PSL,PTG,PTL,PTT,PTTEP,PTTGC,QH,RATCH,RBF,RS,SAWAD,SCB,SCC,SCGP,SINGER,SPALI,SPRC,STA,STEC,STGT,SUPER,SYNEX,TASCO,TCAP,THANI,TISCO,TKN,TOP,TQM,TRUE,TTB,TU,TVO,VGI,WHA,X-X,DOHOME,AAV,PSL,JMART,BAM,MAKRO,STGT,NER,SPCG,BEAUTY,THCOM,AMANAH,WORK,BEC,AU,TVO,KEX,RBF,DOD,OR,SYNEX,JKN,TIDLOR,TTA,CHAYO,RCL,PSL,TTA</value>
             </setting>
             <setting name="delaysec" serializeAs="String">
                 <value>7</value>
