add cv b-w6 maco-w3

--- a/AutomateOpenGraph/App.config
+++ b/AutomateOpenGraph/App.config
@@ -11,10 +11,7 @@
     <userSettings>
         <AutomateOpenGraph.Properties.Settings>
             <setting name="set50" serializeAs="String">
-                <value>ADVANC,AOT,AWC,BAM,BBL,BDMS,BEM,BGRIM,BH,BJC,BTS,CBG,COM7,CPALL,CPF,CPN,CRC,DELTA,DTAC,EA,EGCO,GLOBAL,GPSC,GULF,HMPRO,INTUCH,IVL,KBANK,KTB,KTC,LH,MINT,MTC,OSP,PTT,PTTEP,PTTGC,RATCH,SAWAD,SCB,SCC,SCGP,TISCO,TTB,TOA,TOP,TRUE,TU,VGI,X-X,OR</value>
-            </setting>
-            <setting name="set100" serializeAs="String">
-                <value>AAV,ACE,ADVANC,AEONTS,AMATA,AOT,AP,BAM,BANPU,BBL,BCH,BCP,BCPG,BDMS,BEC,BEM,BGRIM,BH,BJC,BTS,CBG,CENTEL,CHG,CK,CKP,COM7,CPALL,CPF,CPN,CRC,DELTA,DOHOME,DTAC,EA,EGCO,ESSO,GLOBAL,GPSC,GULF,GUNKUL,HANA,HMPRO,ICHI,INTUCH,IRPC,IVL,JAS,JMART,JMT,KBANK,KCE,KKP,KTB,KTC,LH,MAJOR,MEGA,MINT,MTC,NRF,OR,ORI,OSP,PLANB,PRM,PSL,PTG,PTL,PTT,PTTEP,PTTGC,QH,RATCH,RBF,RS,SAWAD,SCB,SCC,SCGP,SINGER,SPALI,SPRC,STA,STEC,STGT,SUPER,SYNEX,TASCO,TCAP,THANI,TISCO,TKN,TOP,TQM,TRUE,TTB,TU,TVO,VGI,WHA,X-X,DOHOME,AAV,PSL,JMART,BAM,MAKRO,STGT,NER,SPCG,BEAUTY,THCOM,AMANAH,WORK,BEC,AU,TVO,KEX,RBF,DOD,OR,SYNEX,JKN,TIDLOR,TTA,CHAYO,RCL,PSL,TTA</value>
+                <value>ADVANC,AOT,BBL,BDMS,BEM,BGRIM,BH,BJC,BTS,CBG,COM7,CPALL,CPF,CPN,CRC,DELTA,DTAC,EA,EGCO,GLOBAL,GPSC,GULF,HMPRO,INTUCH,IRPC,IVL,KBANK,KCE,KTB,KTC,LH,MINT,MTC,OR,OSP,PTT,PTTEP,PTTGC,RATCH,SAWAD,SCB,SCC,SCGP,STA,STGT,TISCO,TOP,TRUE,TTB,TU</value>
             </setting>
             <setting name="delaysec" serializeAs="String">
                 <value>7</value>
@@ -27,6 +24,9 @@
             </setting>
             <setting name="datapath" serializeAs="String">
                 <value>C:\Users\nevada\Documents\vs2017project\AutomateOpenGraph\AutomateOpenGraph\data</value>
+            </setting>
+            <setting name="set100" serializeAs="String">
+                <value>AAV,ACE,ADVANC,AEONTS,AMATA,AOT,AP,BAM,BANPU,BBL,BCH,BCP,BCPG,BDMS,BEC,BEM,BGRIM,BH,BJC,BTS,CBG,CENTEL,CHG,CK,CKP,COM7,CPALL,CPF,CPN,CRC,DELTA,DOHOME,DTAC,EA,EGCO,ESSO,GLOBAL,GPSC,GULF,GUNKUL,HANA,HMPRO,ICHI,INTUCH,IRPC,IVL,JAS,JMART,JMT,KBANK,KCE,KKP,KTB,KTC,LH,MAJOR,MEGA,MINT,MTC,NRF,OR,ORI,OSP,PLANB,PRM,PSL,PTG,PTL,PTT,PTTEP,PTTGC,QH,RATCH,RBF,RS,SAWAD,SCB,SCC,SCGP,SINGER,SPALI,SPRC,STA,STEC,STGT,SUPER,TASCO,TCAP,THANI,TISCO,TKN,TOP,TQM,TRUE,TTB,TU,TVO,VGI,WHA,X-X,MAKRO,NER,SPCG,BEAUTY,THCOM,AMANAH,WORK,BEC,AU,TVO,KEX,DOD,SYNEX,JKN,TIDLOR,CHAYO,RCL,TTA,AWC</value>
             </setting>
         </AutomateOpenGraph.Properties.Settings>
     </userSettings>
