--- a/AutomateOpenGraph/Properties/Settings.settings
+++ b/AutomateOpenGraph/Properties/Settings.settings
@@ -3,10 +3,7 @@
   <Profiles />
   <Settings>
     <Setting Name="set50" Type="System.String" Scope="User">
-      <Value Profile="(Default)">ADVANC,AOT,AWC,BAM,BBL,BDMS,BEM,BGRIM,BH,BJC,BTS,CBG,COM7,CPALL,CPF,CPN,CRC,DELTA,DTAC,EA,EGCO,GLOBAL,GPSC,GULF,HMPRO,INTUCH,IVL,KBANK,KTB,KTC,LH,MINT,MTC,OSP,PTT,PTTEP,PTTGC,RATCH,SAWAD,SCB,SCC,SCGP,TISCO,TTB,TOA,TOP,TRUE,TU,VGI,X-X,OR</Value>
-    </Setting>
-    <Setting Name="set100" Type="System.String" Scope="User">
-      <Value Profile="(Default)">ADVANC,AEONTS,AMATA,AOT,AP,AWC,BANPU,BPP,BBL,BCH,BCP,BCPG,BDMS,BEC,BEM,BGRIM,BH,BJC,BANPU,BTS,CBG,CENTEL,CK,CKP,COM7,CPALL,CPF,CPN,CRC,DELTA,DTAC,EA,EGCO,EPG,ERW,ESSO,GFPT,GLOBAL,GPSC,GULF,GUNKUL,HANA,HMPRO,INTUCH,IRPC,IVL,JAS,JMT,KBANK,KCE,KKP,KTB,KTC,LH,MAJOR,MEGA,MINT,MTC,ORI,OSP,PLANB,PRM,PSH,PTG,PTT,PTTEP,PTTGC,RATCH,RS,SAWAD,SCB,SCC,SCGP,SGP,SPALI,SPRC,STA,STEC,SUPER,TASCO,TCAP,THANI,TISCO,TKN,TTB,TOA,TOP,TPIPP,TQM,TRUE,TU,VGI,WHA,X-X,DOHOME,AAV,ACE,PSL,JMART,BAM,MAKRO,STGT,NER,SPCG,BEAUTY,THCOM,AMANAH,WORK,BEC,AU,TVO,KEX,RBF,DOD,OR,SYNEX,JKN,TIDLOR,TTA,CHAYO,RCL,PSL,TTA</Value>
+      <Value Profile="(Default)">ADVANC,AOT,BBL,BDMS,BEM,BGRIM,BH,BJC,BTS,CBG,COM7,CPALL,CPF,CPN,CRC,DELTA,DTAC,EA,EGCO,GLOBAL,GPSC,GULF,HMPRO,INTUCH,IRPC,IVL,KBANK,KCE,KTB,KTC,LH,MINT,MTC,OR,OSP,PTT,PTTEP,PTTGC,RATCH,SAWAD,SCB,SCC,SCGP,STA,STGT,TISCO,TOP,TRUE,TTB,TU</Value>
     </Setting>
     <Setting Name="delaysec" Type="System.String" Scope="User">
       <Value Profile="(Default)">7</Value>
@@ -19,6 +16,9 @@
     </Setting>
     <Setting Name="datapath" Type="System.String" Scope="User">
       <Value Profile="(Default)">C:\Users\nevada\Documents\vs2017project\AutomateOpenGraph\AutomateOpenGraph\data</Value>
+    </Setting>
+    <Setting Name="set100" Type="System.String" Scope="User">
+      <Value Profile="(Default)">AAV,ACE,ADVANC,AEONTS,AMATA,AOT,AP,BAM,BANPU,BBL,BCH,BCP,BCPG,BDMS,BEC,BEM,BGRIM,BH,BJC,BTS,CBG,CENTEL,CHG,CK,CKP,COM7,CPALL,CPF,CPN,CRC,DELTA,DOHOME,DTAC,EA,EGCO,ESSO,GLOBAL,GPSC,GULF,GUNKUL,HANA,HMPRO,ICHI,INTUCH,IRPC,IVL,JAS,JMART,JMT,KBANK,KCE,KKP,KTB,KTC,LH,MAJOR,MEGA,MINT,MTC,NRF,OR,ORI,OSP,PLANB,PRM,PSL,PTG,PTL,PTT,PTTEP,PTTGC,QH,RATCH,RBF,RS,SAWAD,SCB,SCC,SCGP,SINGER,SPALI,SPRC,STA,STEC,STGT,SUPER,TASCO,TCAP,THANI,TISCO,TKN,TOP,TQM,TRUE,TTB,TU,TVO,VGI,WHA,X-X,MAKRO,NER,SPCG,BEAUTY,THCOM,AMANAH,WORK,BEC,AU,TVO,KEX,DOD,SYNEX,JKN,TIDLOR,CHAYO,RCL,TTA,AWC</Value>
     </Setting>
   </Settings>
 </SettingsFile>
